@@ -1,6 +1,7 @@
 Version 7.8.2
 -------------
 
+- Fix race condition, ensuring Raven initialization is synchronized in appenders. (thanks OutOfBrain)
 - Allow use of custom AndroidRavenFactory. (thanks kassim)
 - Add ``raven.sample.rate`` DSN option to optionally reduce the number of events sent to the server.
 
